[project]
name = "backend"
version = "1.0.0"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["backend/requirements.txt"]}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [ "backend", "backend.models", "backend.config", "backend.instance", "backend.api", "backend.api.test", "backend.api.meet" ]